add least square module

--- a/algorithm/CMakeLists.txt
+++ b/algorithm/CMakeLists.txt
@@ -46,11 +46,13 @@ install(
 add_executable(cubic_spline_test test/cubic_spline_test.cc)
 add_executable(dlt_camera_calibration_test test/dlt_camera_calibration_test.cc)
 add_executable(moving_lest_squares_test test/moving_lest_squares_test.cc)
+add_executable(least_square_polynomial_curve_fit_test test/least_square_polynomial_curve_fit_test.cc)
 add_executable(undistortion test/undistortion_test.cc)
 
 target_link_libraries(cubic_spline_test algorithm glog::glog)
 target_link_libraries(dlt_camera_calibration_test algorithm glog::glog)
 target_link_libraries(moving_lest_squares_test algorithm glog::glog matplotlib_cpp)
+target_link_libraries(least_square_polynomial_curve_fit_test algorithm glog::glog matplotlib_cpp)
 target_link_libraries(undistortion algorithm glog::glog matplotlib_cpp)
 
 # INSTALL
