add gaussian blur task

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,8 @@ set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
 
 project(sensor_lab LANGUAGES CXX)
 
-# add_subdirectory(io)
 add_subdirectory(algorithm)
-# add_subdirectory(camera_calibration_dlt)
-# add_subdirectory(backlight_adjustment)
-# add_subdirectory(correctuion_2d_deformation)
+add_subdirectory(task)
 
 # copy floder to install path
 set(build_data_include ${CMAKE_CURRENT_SOURCE_DIR}/build)
