--- a/task/CMakeLists.txt
+++ b/task/CMakeLists.txt
@@ -7,10 +7,13 @@ find_package(OpenCV REQUIRED)
 
 set(Sophus_DIR /home/V01/uids0025/src/Sophus/build) # 改为自己的安装路径
 find_package( Sophus REQUIRED )
-include_directories( ${Sophus_INCLUDE_DIRS} )
+include_directories(${Sophus_INCLUDE_DIRS})
 
 include_directories(${EIGEN3_INCLUDE_DIRS})
 include_directories(${OpenCV_INCLUDE_DIRS})
+
+# add io/ path to compiler search
+include_directories(${PROJECT_SOURCE_DIR}/io)
 
 add_library(task STATIC ${srcs})
 
@@ -19,9 +22,11 @@ target_link_libraries(task ${OpenCV_LIBS} glog::glog)
 
 add_executable(my_gaussian_blur test/my_gaussian_blur.cc)
 add_executable(use_sophus test/use_sophus.cc)
+add_executable(my_transform test/my_transform.cc)
 
 target_link_libraries(my_gaussian_blur task glog::glog)
 target_link_libraries(use_sophus task glog::glog ${Sophus_LIBRARIES})
+target_link_libraries(my_transform task glog::glog)
 
 # INSTALL
 install(
