--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ project(sensor_lab LANGUAGES CXX)
 
 add_subdirectory(algorithm)
 add_subdirectory(task)
+add_subdirectory(cpp_test)
 
 # copy floder to install path
 set(build_data_include ${CMAKE_CURRENT_SOURCE_DIR}/build)
