--- a/cere_test/CMakeLists.txt
+++ b/cere_test/CMakeLists.txt
@@ -33,8 +33,10 @@ add_executable(cere_linear_test test/cere_linear_test.cc)
 add_executable(powell test/powell.cc)
 add_executable(curve_fitting test/curve_fitting.cc)
 add_executable(bundle_adjustment_simple test/bundle_adjustment_simple.cc)
+add_executable(bundle_adjuster test/bundle_adjuster.cc)
 
 target_link_libraries(cere_linear_test ${OpenCV_LIBS} Ceres::ceres glog::glog)
 target_link_libraries(powell Ceres::ceres glog::glog gflags)
 target_link_libraries(curve_fitting Ceres::ceres glog::glog gflags)
 target_link_libraries(bundle_adjustment_simple Ceres::ceres glog::glog gflags)
+target_link_libraries(bundle_adjuster my_cere)
