add gauss-newton and ceres demo for slam book curve fit

--- a/cere_test/CMakeLists.txt
+++ b/cere_test/CMakeLists.txt
@@ -34,9 +34,11 @@ add_executable(powell test/powell.cc)
 add_executable(curve_fitting test/curve_fitting.cc)
 add_executable(bundle_adjustment_simple test/bundle_adjustment_simple.cc)
 add_executable(bundle_adjuster test/bundle_adjuster.cc)
+add_executable(slam_book2_curve_fit test/slam_book2_curve_fit.cc)
 
 target_link_libraries(cere_linear_test ${OpenCV_LIBS} Ceres::ceres glog::glog)
 target_link_libraries(powell Ceres::ceres glog::glog gflags)
 target_link_libraries(curve_fitting Ceres::ceres glog::glog gflags)
 target_link_libraries(bundle_adjustment_simple Ceres::ceres glog::glog gflags)
 target_link_libraries(bundle_adjuster my_cere)
+target_link_libraries(slam_book2_curve_fit my_cere)
