--- a/task/CMakeLists.txt
+++ b/task/CMakeLists.txt
@@ -30,6 +30,7 @@ add_executable(my_transform test/my_transform.cc)
 add_executable(eigen_base_test test/eigen_base_test.cc)
 add_executable(mat_base test/mat_base.cc)
 add_executable(covariance_test test/covariance_test.cc)
+add_executable(gauss_newton_curve_fitting_test test/gauss_newton_curve_fitting_test.cc)
 
 target_link_libraries(my_gaussian_blur task glog::glog)
 target_link_libraries(use_sophus task glog::glog ${Sophus_LIBRARIES})
@@ -37,6 +38,7 @@ target_link_libraries(my_transform task glog::glog)
 target_link_libraries(eigen_base_test glog::glog)
 target_link_libraries(mat_base task glog::glog)
 target_link_libraries(covariance_test task glog::glog)
+target_link_libraries(gauss_newton_curve_fitting_test task glog::glog)
 
 # INSTALL
 install(
