--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_subdirectory(cpp_test)
 add_subdirectory(pcl_test)
 add_subdirectory(cere_test)
 add_subdirectory(g2o_test)
+add_subdirectory(feature_detect)
 
 # copy floder to install path
 set(build_data_include ${CMAKE_CURRENT_SOURCE_DIR}/build)
