--- a/feature_detect/CMakeLists.txt
+++ b/feature_detect/CMakeLists.txt
@@ -7,6 +7,7 @@ find_package(OpenCV REQUIRED)
 
 include_directories(${PCL_INCLUDE_DIRS})
 include_directories(${OpenCV_INCLUDE_DIRS})
+include_directories(${PROJECT_SOURCE_DIR}/common)
 
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
