--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(pcl_test)
 add_subdirectory(cere_test)
 add_subdirectory(g2o_test)
 add_subdirectory(task)
+add_subdirectory(loop_closure)
 
 # copy floder to install path
 set(build_data_include ${CMAKE_CURRENT_SOURCE_DIR}/build)
