--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(g2o_test)
 add_subdirectory(task)
 add_subdirectory(loop_closure)
 add_subdirectory(dense_mapping)
+add_subdirectory(kalman_filter)
 
 # copy floder to install path
 set(build_data_include ${CMAKE_CURRENT_SOURCE_DIR}/build)
