--- a/kalman_filter/CMakeLists.txt
+++ b/kalman_filter/CMakeLists.txt
@@ -41,7 +41,7 @@ install(
   TARGETS kalman_matplotlib_cpp
   EXPORT install_targets
 )
-# ================================================================unscented_transform_test
+# ================================================================
 
 add_executable(discrete_kalman_filter_test test/discrete_kalman_filter_test.cc)
 add_executable(range_sensor_ekf_sample_test test/range_sensor_ekf_sample_test.cc)
@@ -49,6 +49,7 @@ add_executable(range_sensor_ekf_test test/range_sensor_ekf_test.cc)
 add_executable(kf_state_estimation test/kf_state_estimation.cc)
 add_executable(unscented_transform_test test/unscented_transform_test.cc)
 add_executable(ukf_test test/ukf_test.cc)
+add_executable(sr_ukf_linear_function test/sr_ukf_linear_function.cc)
 
 target_link_libraries(discrete_kalman_filter_test kalman_filter kalman_matplotlib_cpp)
 target_link_libraries(range_sensor_ekf_sample_test kalman_filter kalman_matplotlib_cpp)
@@ -56,6 +57,7 @@ target_link_libraries(range_sensor_ekf_test kalman_filter kalman_matplotlib_cpp)
 target_link_libraries(kf_state_estimation kalman_filter kalman_matplotlib_cpp)
 target_link_libraries(unscented_transform_test kalman_filter kalman_matplotlib_cpp)
 target_link_libraries(ukf_test kalman_filter kalman_matplotlib_cpp)
+target_link_libraries(sr_ukf_linear_function kalman_filter kalman_matplotlib_cpp)
 
 # INSTALL
 install(
