add mahalanobis distance test

--- a/algorithm/CMakeLists.txt
+++ b/algorithm/CMakeLists.txt
@@ -51,6 +51,7 @@ add_executable(moving_lest_squares_test test/moving_lest_squares_test.cc)
 add_executable(least_square_polynomial_curve_fit_test test/least_square_polynomial_curve_fit_test.cc)
 add_executable(undistortion test/undistortion_test.cc)
 add_executable(tsai_lenz_eye_in_hand test/tsai_lenz_eye_in_hand.cc)
+add_executable(mahalanobis_distance_test test/mahalanobis_distance_test.cc)
 
 target_link_libraries(cubic_spline_test algorithm glog::glog)
 target_link_libraries(dlt_camera_calibration_test algorithm glog::glog)
@@ -58,6 +59,7 @@ target_link_libraries(moving_lest_squares_test algorithm glog::glog matplotlib_c
 target_link_libraries(least_square_polynomial_curve_fit_test algorithm glog::glog matplotlib_cpp)
 target_link_libraries(undistortion algorithm glog::glog matplotlib_cpp)
 target_link_libraries(tsai_lenz_eye_in_hand algorithm glog::glog matplotlib_cpp)
+target_link_libraries(mahalanobis_distance_test algorithm glog::glog)
 
 # INSTALL
 install(
