--- a/path_plan/CMakeLists.txt
+++ b/path_plan/CMakeLists.txt
@@ -55,6 +55,9 @@ target_link_libraries(a_star_test path_plan)
 add_executable(dwa_test test/dwa_test.cc)
 target_link_libraries(dwa_test path_plan)
 
+add_executable(rrt_test test/rrt_test.cc)
+target_link_libraries(rrt_test path_plan)
+
 # INSTALL
 install(
   TARGETS easy_dijkstra_test dijkstra_test a_star_test dwa_test
