add rrt_star chapter

--- a/path_plan/CMakeLists.txt
+++ b/path_plan/CMakeLists.txt
@@ -61,6 +61,9 @@ target_link_libraries(rrt_test path_plan)
 add_executable(rrt_connect_test test/rrt_connect_test.cc)
 target_link_libraries(rrt_connect_test path_plan)
 
+add_executable(rrt_star_test test/rrt_star_test.cc)
+target_link_libraries(rrt_star_test path_plan)
+
 # INSTALL
 install(
   TARGETS easy_dijkstra_test dijkstra_test a_star_test dwa_test rrt_test rrt_connect_test
