--- a/path_plan/CMakeLists.txt
+++ b/path_plan/CMakeLists.txt
@@ -70,7 +70,10 @@ target_link_libraries(bezier_curve_test path_plan)
 add_executable(curve_interpolation test/curve_interpolation.cc)
 target_link_libraries(curve_interpolation path_plan)
 
+add_executable(b_spline_curve_test test/b_spline_curve_test.cc)
+target_link_libraries(b_spline_curve_test path_plan)
+
 # INSTALL
 install(
-  TARGETS easy_dijkstra_test dijkstra_test a_star_test dwa_test rrt_test rrt_connect_test bezier_curve_test curve_interpolation
+  TARGETS easy_dijkstra_test dijkstra_test a_star_test dwa_test rrt_test rrt_connect_test bezier_curve_test curve_interpolation b_spline_curve_test
   ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/build/install)
