add cpp variadic_template

--- a/cpp_test/CMakeLists.txt
+++ b/cpp_test/CMakeLists.txt
@@ -2,10 +2,11 @@ include_directories(${PROJECT_SOURCE_DIR}/common)
 
 find_package(glog 0.6.0 REQUIRED)
 add_executable(template_test template_test.cc)
+add_executable(variadic_templates_test variadic_templates_test.cc)
 
 target_link_libraries(template_test glog::glog)
 
 # INSTALL
 install(
-  TARGETS template_test 
+  TARGETS template_test variadic_templates_test
   ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/build/install)
