--- a/cpp_test/CMakeLists.txt
+++ b/cpp_test/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(template_test template_test.cc)
 add_executable(variadic_templates_test variadic_templates_test.cc)
 add_executable(left_value_right_value_test left_value_right_value_test.cc)
 add_executable(diy_smart_ptr_test diy_smart_ptr_test.cc diy_smart_ptr.hpp)
+add_executable(bind_function_test bind_function_test.cc)
 
 target_link_libraries(template_test glog::glog)
 
