add imu imu_integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ add_subdirectory(dense_mapping)
 add_subdirectory(kalman_filter)
 add_subdirectory(path_plan)
 add_subdirectory(path_tracking)
+add_subdirectory(imu)
 
 # copy floder to install path
 set(build_data_include ${CMAKE_CURRENT_SOURCE_DIR}/build)
