add imu_preintegration and gtest_preintegration

--- a/imu_and_gnss/CMakeLists.txt
+++ b/imu_and_gnss/CMakeLists.txt
@@ -30,9 +30,15 @@ add_library(gnss STATIC src/utm_convert.cc)
 target_include_directories(gnss PUBLIC include)
 target_link_libraries(gnss ${OpenCV_LIBS} ${PCL_LIBRARIES} ${Sophus_LIBRARIES} glog::glog utm_convert)
 
+# imu+rtk+odom eskf
 add_library(eskf STATIC include/eskf.hpp)
 target_include_directories(eskf PUBLIC include)
 target_link_libraries(eskf ${OpenCV_LIBS} ${PCL_LIBRARIES} ${Sophus_LIBRARIES} glog::glog imu gnss utm_convert)
+
+# imu_preintegration
+add_library(imu_preintegration STATIC src/imu_preintegration.cc)
+target_include_directories(imu_preintegration PUBLIC include)
+target_link_libraries(imu_preintegration ${OpenCV_LIBS} ${PCL_LIBRARIES} ${Sophus_LIBRARIES} glog::glog imu)
 
 # imu direct integration
 add_executable(imu_integration_test test/imu_integration_test.cc)
@@ -45,6 +51,10 @@ target_link_libraries(gnss_data_test gnss glog::glog imu)
 # eskf gins
 add_executable(run_eskf_gins test/run_eskf_gins.cc)
 target_link_libraries(run_eskf_gins eskf)
+
+# gtest example
+add_executable(gtest_preintegration test/gtest_preintegration.cc)
+target_link_libraries(gtest_preintegration gtest pthread glog gflags imu_preintegration)
 
 # INSTALL
 install(
