--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,20 +11,27 @@ set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
 
 project(sensor_lab LANGUAGES CXX)
 
-add_subdirectory(algorithm)
-add_subdirectory(feature_detect)
-add_subdirectory(pose_estimation)
-add_subdirectory(cpp_test)
-add_subdirectory(pcl_test)
-add_subdirectory(cere_test)
-add_subdirectory(g2o_test)
-add_subdirectory(task)
-add_subdirectory(loop_closure)
-add_subdirectory(dense_mapping)
-add_subdirectory(kalman_filter)
-add_subdirectory(path_plan)
-add_subdirectory(path_tracking)
-add_subdirectory(imu_and_gnss)
+option(ONLY_CPP_TEST "Only Cpp test" OFF)
+
+if(ONLY_CPP_TEST)
+  message(STATUS "Only Cpp test is ON")
+  add_subdirectory(cpp_test)
+else()
+  add_subdirectory(algorithm)
+  add_subdirectory(feature_detect)
+  add_subdirectory(pose_estimation)
+  add_subdirectory(cpp_test)
+  add_subdirectory(pcl_test)
+  add_subdirectory(cere_test)
+  add_subdirectory(g2o_test)
+  add_subdirectory(task)
+  add_subdirectory(loop_closure)
+  add_subdirectory(dense_mapping)
+  add_subdirectory(kalman_filter)
+  add_subdirectory(path_plan)
+  add_subdirectory(path_tracking)
+  add_subdirectory(imu_and_gnss)
+endif()
 
 # copy floder to install path
 set(build_data_include ${CMAKE_CURRENT_SOURCE_DIR}/build)
